2005-01-14  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Re-add missing \n in get_description.

2005-01-14  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm, PkgVersion.pm: Do percent-expansion in DescDetail and DescUsage.

2005-01-13  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: Fixed handling of delete_tempfile flag for execute().

2005-01-12  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Change buildlock to always lock on parent pkg.

2005-01-09  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Patch dumpinfo to display "b" if --use-binary and
	.deb is downloadable (based on Patches #1062085).

2005-01-09  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Put off variable assignments in loop until after
	checking abort conditions.
	* Package.pm: Add is_provided() method (Patches #1053414).
	* Engine.pm: 'fink list' shows "p" for virtual that is installed;
	'fink listpackages' says YES for provided pkgs (Patches #1053414).

2005-01-09  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: rewrite execute() build_as_nobody to use recursive
	wrapper (cuts down on system.log polution and fixes pipelines).
	
2005-01-06  Christian Schaffner  <chris01@users.sourceforge.net>

	* Configure.pm: Add conf_file_compat_version constant to indicate the 
	  current compatibility version of the fink.conf file.
	  Set the ConfFileCompatVersion to that value during configure.

2005-01-05  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Fixed processing of execute() return-code.

2005-01-05  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Try not to leave partially-installed buildlock pkg.

2005-01-05  Daniel Macks  <dmacks@netspace.org>

	* SelfUpdate.pm: Do 'apt-get update' *before* rebuilding aptdb.

2005-01-05  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: Added a delete_tempfile flag for execute().

2005-01-05  Christian Schaffner  <chris01@users.sourceforge.net>

	* PkgVersion.pm: Change wording for failed 'fink remove'.
